unpackaged/main/default/objects/Lead/fields/Send_Reminder_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_Reminder_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Reminder Email</label>
    <type>Checkbox</type>
</CustomField>