unpackaged/main/default/objects/Lead/fields/SIC_Description_Industry__c.field-meta.xml
<CustomField>
    <fullName>SIC_Description_Industry__c</fullName>
    <label>SIC Description (Specific Industry)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>