unpackaged/main/default/objects/Lead/fields/Status_Closed_Can_t_Reach_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Status_Closed_Can_t_Reach_Date_Time__c</fullName>
    <label>Status Closed Can't Reach Date Time</label>
    <type>DateTime</type>
</CustomField>