unpackaged/main/default/objects/Lead/fields/Status_Closed_Unqualified_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Status_Closed_Unqualified_Date_Time__c</fullName>
    <label>Status Closed Unqualified Date Time</label>
    <type>DateTime</type>
</CustomField>