unpackaged/main/default/objects/Lead/fields/Status_Converted_Signed_App_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Status_Converted_Signed_App_Date_Time__c</fullName>
    <label>Status Converted Signed App Date Time</label>
    <type>DateTime</type>
</CustomField>