unpackaged/main/default/objects/Lead/fields/Status_Open_Attempting_Contact_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Status_Open_Attempting_Contact_Date_Time__c</fullName>
    <label>Status Open Attempting Contact Date Time</label>
    <type>DateTime</type>
</CustomField>