unpackaged/main/default/objects/Lead/fields/Status_Open_Awaiting_App_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Status_Open_Awaiting_App_Date_Time__c</fullName>
    <label>Status Open Awaiting App Date Time</label>
    <type>DateTime</type>
</CustomField>