unpackaged/main/default/objects/Lead/fields/Test_123__c.field-meta.xml
<CustomField>
    <fullName>Test_123__c</fullName>
    <formula>DATETIMEVALUE(TEXT(Appointment_Date__c) + " " + TEXT(Appointment_Time__c)+"+0300")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Test 123</label>
    <type>DateTime</type>
</CustomField>