unpackaged/main/default/objects/Lead/fields/TestDateReceived__c.field-meta.xml
<CustomField>
    <fullName>TestDateReceived__c</fullName>
    <label>TestDateReceived</label>
    <type>DateTime</type>
</CustomField>