unpackaged/main/default/objects/Lead/fields/Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Time_Zone__c</fullName>
    <description>The time zone the merchant is located in</description>
    <label>Time Zone</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Eastern Time</fullName>
            </value>
            <value>
                <fullName>Central Time</fullName>
            </value>
            <value>
                <fullName>Mountain Time</fullName>
            </value>
            <value>
                <fullName>Pacific Time</fullName>
            </value>
            <value>
                <fullName>Hawaii Time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>