unpackaged/main/default/objects/Lead/fields/TodayTemp__c.field-meta.xml
<CustomField>
    <fullName>TodayTemp__c</fullName>
    <formula>TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TodayTemp</label>
    <type>Date</type>
</CustomField>