unpackaged/main/default/objects/Lead/fields/UCC_Filing_Date__c.field-meta.xml
<CustomField>
    <fullName>UCC_Filing_Date__c</fullName>
    <description>This is</description>
    <inlineHelpText>This is when the most recent secured party filed a UCC on this merchant</inlineHelpText>
    <label>UCC Filing Date</label>
    <type>Date</type>
</CustomField>