unpackaged/main/default/objects/Lead/fields/Use_of_Funds__c.field-meta.xml
<CustomField>
    <fullName>Use_of_Funds__c</fullName>
    <label>Use of Funds</label>
    <type>TextArea</type>
</CustomField>