unpackaged/main/default/objects/Lead/fields/Use_of_Funds_Web__c.field-meta.xml
<CustomField>
    <fullName>Use_of_Funds_Web__c</fullName>
    <description>The merchant will select here what he generally intends on using the money for on the online form</description>
    <inlineHelpText>The merchant will select here what he generally intends on using the money for on the online form</inlineHelpText>
    <label>Use of Funds (Web)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Working Capital</fullName>
            </value>
            <value>
                <fullName>Equipment</fullName>
            </value>
            <value>
                <fullName>Inventory</fullName>
            </value>
            <value>
                <fullName>Refinancing / Consolidation</fullName>
            </value>
            <value>
                <fullName>Pay Bills</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>