unpackaged/main/default/objects/Lead/fields/Webbula_Email_Status__c.field-meta.xml
<CustomField>
    <fullName>Webbula_Email_Status__c</fullName>
    <label>Webbula Email Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>F</fullName>
            </value>
            <value>
                <fullName>U</fullName>
            </value>
            <value>
                <fullName>R</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>I</fullName>
            </value>
            <value>
                <fullName>V</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>