unpackaged/main/default/objects/Lead/fields/Years_in_Business__c.field-meta.xml
<CustomField>
    <fullName>Years_in_Business__c</fullName>
    <label>Years in Business</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Less than 6 months</fullName>
            </value>
            <value>
                <fullName>Less than One Year</fullName>
            </value>
            <value>
                <fullName>1 Yr</fullName>
            </value>
            <value>
                <fullName>2 yrs</fullName>
            </value>
            <value>
                <fullName>3 yrs</fullName>
            </value>
            <value>
                <fullName>4 yrs</fullName>
            </value>
            <value>
                <fullName>5 yrs+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>