unpackaged/main/default/objects/Lead/fields/Zip_1__c.field-meta.xml
<CustomField>
    <fullName>Zip_1__c</fullName>
    <label>Zip(1)</label>
    <length>5</length>
    <type>Text</type>
</CustomField>