unpackaged/main/default/objects/Lead/fields/Zip_2__c.field-meta.xml
<CustomField>
    <fullName>Zip_2__c</fullName>
    <label>Zip(2)</label>
    <length>5</length>
    <type>Text</type>
</CustomField>