unpackaged/main/default/objects/Lead/recordTypes/Cashio.recordType-meta.xml
<RecordType>
    <fullName>Cashio</fullName>
    <active>true</active>
    <businessProcess>Lead Process</businessProcess>
    <label>Cashio</label>
</RecordType>