unpackaged/main/default/objects/Lead/recordTypes/Lead_Layout_Main.recordType-meta.xml
<RecordType>
    <fullName>Lead_Layout_Main</fullName>
    <active>true</active>
    <businessProcess>Lead Process</businessProcess>
    <label>Lead Layout Main</label>
</RecordType>