unpackaged/main/default/objects/Lead/recordTypes/Lead_Layout_With_App_Fields.recordType-meta.xml
<RecordType>
    <fullName>Lead_Layout_With_App_Fields</fullName>
    <active>true</active>
    <businessProcess>Lead Process</businessProcess>
    <label>Lead Layout With App Fields</label>
</RecordType>