unpackaged/main/default/objects/Lead/validationRules/Appointment_Required_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Appointment_Required_Fields</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Status , "Open - Appointment Set") &amp;&amp;
(ISNULL( Appointment_Date__c ) 
|| ISNULL( Appointment_Time__c ) 
||ISBLANK(TEXT(Appointment_Time_Zone__c )))</errorConditionFormula>
    <errorMessage>For Setting Status to "Open - Appointment Set", all the next fields are needed: Appointment Date, Appointment Time, Appointment Time Zone</errorMessage>
</ValidationRule>