unpackaged/main/default/objects/Lead/validationRules/Other_Industry_Require_SpecificIndustry.validationRule-meta.xml
<ValidationRule>
    <fullName>Other_Industry_Require_SpecificIndustry</fullName>
    <active>false</active>
    <description>When the industry is "Other", require that the "Specicifc Industry" field is populated.</description>
    <errorConditionFormula>AND( TEXT(Industry) == 'Other',  ISBLANK(SIC_Description_Industry__c))</errorConditionFormula>
    <errorDisplayField>SIC_Description_Industry__c</errorDisplayField>
    <errorMessage>Please provide the 'Specific industry' if industry  is 'Other'.</errorMessage>
</ValidationRule>