unpackaged/main/default/objects/Lead/validationRules/Phone_CellPhone_Email_Fax_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_CellPhone_Email_Fax_Required</fullName>
    <active>false</active>
    <description>Require either a Phone, CellPhone, Fax, or Email for each lead.</description>
    <errorConditionFormula>AND(  ISBLANK(Phone ) , ISBLANK(Cell_Phone__c), ISBLANK(Fax) ,   ISBLANK(Email ))</errorConditionFormula>
    <errorMessage>Require either a Phone, CellPhone, Fax or Email for each lead.</errorMessage>
</ValidationRule>