unpackaged/main/default/objects/Lead/validationRules/Require_Cash_advance_compnay_and_balance.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Cash_advance_compnay_and_balance</fullName>
    <active>false</active>
    <description>The rule requires that when Owe fund to existing cash advance company is yes, Current Cash Advance Company and Balance must be entered</description>
    <errorConditionFormula>AND (
ISPICKVAL(Owe_funds_to_an_existing_Cash_Adv_Comp__c, "Yes"),
OR (
 ISBLANK(Current_Cash_Advance_Company__c),
 ISBLANK(Balance__c))
)</errorConditionFormula>
    <errorDisplayField>Current_Cash_Advance_Company__c</errorDisplayField>
    <errorMessage>Please enter the Current Cash Advance Company and Balance</errorMessage>
</ValidationRule>