unpackaged/main/default/objects/Lead/validationRules/Status_AppSent_Converted_req_Annual_Sale.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_AppSent_Converted_req_Annual_Sale</fullName>
    <active>false</active>
    <description>Before changing the status to "Open - Awaiting App (App Sent)t" or "Converted", require annual sales.</description>
    <errorConditionFormula>AND(OR( CONTAINS(TEXT(Status), 'App Sent'), CONTAINS( TEXT(Status), 'Converted')), ISBLANK(Annual_Gross_Sales__c ))</errorConditionFormula>
    <errorDisplayField>Annual_Gross_Sales__c</errorDisplayField>
    <errorMessage>Please provide Annual Gross Sales if the Lead status is 'Open - Awaiting App (App Sent)' or 'Converted'.</errorMessage>
</ValidationRule>