unpackaged/main/default/objects/Lead/validationRules/Status_Closed_req_Reason_N_Description.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_Closed_req_Reason_N_Description</fullName>
    <active>false</active>
    <description>For closing out a lead Reason (Piclist &amp; Description) is Required.</description>
    <errorConditionFormula>IF((CONTAINS(TEXT(Status),'Closed')&amp;&amp; CONTAINS(TEXT(Status),'Reach')), false , (CONTAINS(TEXT(Status),'Closed') &amp;&amp; (ISBLANK(TEXT(Closed_Reason__c)) || ISBLANK( Closed_Reason_Description__c))))</errorConditionFormula>
    <errorDisplayField>Percent_of_Ownership_1__c</errorDisplayField>
    <errorMessage>Please provide 'Closed Reason Description' and 'Closed Reason' if the Lead Status is Closed.</errorMessage>
</ValidationRule>