unpackaged/main/default/objects/Lead/validationRules/Status_Converted_to_Convert_a_Lead.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_Converted_to_Convert_a_Lead</fullName>
    <active>true</active>
    <errorConditionFormula>AND(IsConverted , NOT( CONTAINS( TEXT(Status) , 'Converted')))</errorConditionFormula>
    <errorMessage>Please select Lead Status to one of the 'Converted' value before converting the Lead.</errorMessage>
</ValidationRule>