unpackaged/main/default/objects/Lead/listViews/Abe_Hot_leads.listView-meta.xml
<ListView>
    <fullName>Abe_Hot_leads</fullName>
    <booleanFilter>(1 AND 2 AND 3 AND 4 AND 5 AND 7 AND 8) OR (2 AND 3 AND 4 AND 5 AND 6 AND 7 AND 8)</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.LAST_ACTIVITY</columns>
    <columns>Campaign__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:100</value>
    </filters>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>aritt</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notContain</operation>
        <value>Closed - Bad Lead</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notContain</operation>
        <value>Closed - Unqualified</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notContain</operation>
        <value>Converted - Signed App</value>
    </filters>
    <filters>
        <field>Date_Lead_Reignited__c</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:100</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notContain</operation>
        <value>Closed - Not Interested Yet</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notContain</operation>
        <value>DO NOT CALL</value>
    </filters>
    <label>Abe - Hot leads</label>
    <sharedTo>
        <group>Abe_Ritter</group>
        <group>AshM</group>
        <group>AshMitchell</group>
        <group>Ash_Mitchell</group>
    </sharedTo>
</ListView>