unpackaged/main/default/objects/Lead/listViews/Aiden.listView-meta.xml
<ListView>
    <fullName>Aiden</fullName>
    <booleanFilter>(1 AND 2 AND 3 AND 4 AND 5 AND 7 AND 8 AND 9 AND 10) OR (2 AND 3 AND 4 AND 5 AND 6 AND 7 AND 8 AND 9 AND 10)</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>Campaign__c</columns>
    <columns>Date_Lead_Received__c</columns>
    <columns>Date_Lead_Reignited__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:14</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notContain</operation>
        <value>Closed - Bad Lead</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notContain</operation>
        <value>Closed - Unqualified</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notContain</operation>
        <value>Converted - Signed App</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notContain</operation>
        <value>Closed - Not Interested Yet</value>
    </filters>
    <filters>
        <field>Date_Lead_Reignited__c</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:14</value>
    </filters>
    <filters>
        <field>Campaign__c</field>
        <operation>notContain</operation>
        <value>101619 UCCs</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notContain</operation>
        <value>DO NOT CALL</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notContain</operation>
        <value>Closed - Can't Reach</value>
    </filters>
    <filters>
        <field>Campaign__c</field>
        <operation>notContain</operation>
        <value>App sent Direct two</value>
    </filters>
    <label>Aiden Hot leads - last 14 days</label>
    <sharedTo>
        <group>Aiden_Ivory</group>
    </sharedTo>
</ListView>