unpackaged/main/default/objects/Lead/listViews/Aiden_Leads.listView-meta.xml
<ListView>
    <fullName>Aiden_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>Campaign__c</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.ANNUAL_REVENUE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>aiden</value>
    </filters>
    <label>Aiden Leads</label>
    <sharedTo>
        <group>AIS_Ventures</group>
    </sharedTo>
</ListView>