unpackaged/main/default/objects/Lead/listViews/Alios_Marketing.listView-meta.xml
<ListView>
    <fullName>Alios_Marketing</fullName>
    <columns>FULL_NAME</columns>
    <columns>Date_Lead_Received__c</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>Best_Time_to_Call__c</columns>
    <columns>LEAD.ANNUAL_REVENUE</columns>
    <columns>Desired_Amount_Web__c</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.LAST_ACTIVITY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Campaign__c</field>
        <operation>equals</operation>
        <value>Alios Marketing</value>
    </filters>
    <label>Alios Marketing</label>
    <sharedTo>
        <group>Aiden_Ivory</group>
        <group>Hagai_Ovadia</group>
        <group>Ryan_O_Sullivan</group>
    </sharedTo>
</ListView>