unpackaged/main/default/objects/Lead/listViews/App_Getters_Lead_List.listView-meta.xml
<ListView>
    <fullName>App_Getters_Lead_List</fullName>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>Flag__c</columns>
    <columns>Cell_Phone__c</columns>
    <columns>Time_Zone_New__c</columns>
    <columns>Date_Lead_Received__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.DO_NOT_CALL</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>aiden,RyanO</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>,Open - Attempting Contact,Open - Awaiting App (App Sent),Closed - Can't Reach</value>
    </filters>
    <filters>
        <field>LEAD.DO_NOT_CALL</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>FULL_NAME</field>
        <operation>notContain</operation>
        <value>Business Owner,(,),1,2,3,4,5,6,7,8,9,0,-,.,!,@,&amp;,#,/,",?,;,",?</value>
    </filters>
    <filters>
        <field>LEAD.FIRST_NAME</field>
        <operation>notEqual</operation>
        <value>A,B,C,D,E,F,G,H,I,J,K,L,M,N,O,P,Q,R,S,T,U,V,W,X,Y,Z</value>
    </filters>
    <filters>
        <field>Date_Lead_Received__c</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2018 12:00 AM</value>
    </filters>
    <label>App Getters Lead List</label>
    <sharedTo>
        <group>Elazar_Krieger</group>
        <group>Ryan_O_Sullivan</group>
    </sharedTo>
</ListView>