unpackaged/main/default/objects/Lead/listViews/App_sent_Direct_two.listView-meta.xml
<ListView>
    <fullName>App_sent_Direct_two</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Campaign__c</field>
        <operation>equals</operation>
        <value>App sent Direct two</value>
    </filters>
    <label>App sent Direct two</label>
    <sharedTo>
        <group>Aiden_Ivory</group>
    </sharedTo>
</ListView>