unpackaged/main/default/objects/Lead/listViews/Appointments_Set_Leads.listView-meta.xml
<ListView>
    <fullName>Appointments_Set_Leads</fullName>
    <columns>LEAD.COMPANY</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.PHONE</columns>
    <columns>Cell_Phone__c</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>Date_Lead_Reignited__c</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>Open - Appointment Set</value>
    </filters>
    <label>Appointments Set Leads</label>
    <sharedTo>
        <group>AIS_Ventures</group>
        <group>Aiden_Ivory</group>
    </sharedTo>
</ListView>