unpackaged/main/default/objects/Lead/listViews/Ash_App_Sent.listView-meta.xml
<ListView>
    <fullName>Ash_App_Sent</fullName>
    <columns>LEAD.COMPANY</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.PHONE</columns>
    <columns>Cell_Phone__c</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>Open - Awaiting App (App Sent)</value>
    </filters>
    <filters>
        <field>CREATEDBY_USER.ALIAS</field>
        <operation>equals</operation>
        <value>Ash</value>
    </filters>
    <label>Ash - App Sent</label>
    <sharedTo>
        <group>AIS_Ventures</group>
        <group>AshM</group>
        <group>Dave_Fine</group>
    </sharedTo>
</ListView>