unpackaged/main/default/objects/Lead/listViews/Ash_Avochato2.listView-meta.xml
<ListView>
    <fullName>Ash_Avochato2</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>Campaign__c</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.PHONE</columns>
    <filterScope>Everything</filterScope>
    <label>Ash Avochato2</label>
    <sharedTo>
        <group>AshM</group>
        <group>AshMitchell</group>
        <group>AshPipeline</group>
        <group>Ash_Mitchell</group>
    </sharedTo>
</ListView>